--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-/vendor
-composer.phar
-composer.lock
-.DS_Store
+*.lock
+package.xml
 .idea
-phpunit.xml
+.idea/*
+.php_cs.cache
+docs/_build
 .phpunit.result.cache
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/reports
+.env
+.env.backup
+*.env
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/build
