--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": [
       ""
   ],
-  "homepage": "https://github.com/codica-studio/excel",
+  "homepage": "https://github.com/codicastudio/excel",
   "license": "MIT",
   "authors": [
       {
